<resources>
    <string name="app_name">Inventory App Stage 2</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Title text for the empty view, which is beneath bookshelf image [CHAR LIMIT=50] -->
    <!-- Image credit to <div>Icons made by <a href="https://www.flaticon.com/authors/freepik"
    title="Bookshelf">Bookshelf</a> from <a href="https://www.flaticon.com/"
    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
    <string name="empty_view_title_text">There aren\'t any books here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Book Name</string>

    <!-- Text hint for book price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Book Price</string>

    <!-- Text hint for book quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Book Quantity</string>

    <!-- Text hint for book supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_name">Book Supplier Name</string>

    <!-- Text hint for book supplier contact field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_contact">Book Supplier Phone Number</string>

    <string name="deleted_all_books_message">All Books Deleted</string>

    <string name="sale">Sale</string>

    <string name="quantity_no_inventory_message">This book is no longer available!</string>

    <string name="supplier_phone_number">Supplier Phone Number</string>

    <string name="increase_button">increase button</string>

    <string name="decrease_button">decrease button</string>

    <string name="update_amount_failed">Update amount failed</string>

    <string name="update_amount_successful">Update amount successful</string>

    <string name="editor_insert_price_empty">Price field is empty</string>

    <string name="editor_insert_quantity_empty">Quantity field is empty</string>

    <string name="editor_insert_name_empty">Name field is empty</string>

    <string name="editor_insert_supplier_name_empty">Supplier name field is empty</string>

    <string name="editor_insert_supplier_contact_empty">Supplier phone number field is empty</string>

    <string name="main_pg_price">Price:\u0020</string>

    <string name="main_pg_quantity">Quantity:\u0020</string>

    <string name="book_supplier_contact">Book Supplier \n Contact</string>

    <string name="book_name">Book Name</string>

    <string name="book_price">Book Price</string>

    <string name="book_quantity">Book Quantity</string>

    <string name="book_supplier">Book Supplier</string>

</resources>
