<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <!-- Label -->
    <TextView
        style="@style/OverviewLabelStyle"
        android:text="@string/category_overview" />

    <LinearLayout
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/general_margin">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingTop_editor">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Label -->
                <TextView
                    android:id="@+id/book_name_label"
                    style="@style/CategoryStyle"
                    android:text="@string/book_name" />

                <!-- Book name field -->
                <EditText
                    android:id="@+id/edit_book_name"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/book_name_label"
                    android:hint="@string/hint_book_name"
                    android:inputType="textCapWords" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Label -->
                <TextView
                    android:id="@+id/edit_book_price_label"
                    style="@style/CategoryStyle"
                    android:text="@string/book_price" />

                <!-- Book price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/edit_book_price_label"
                    android:hint="@string/hint_book_price"
                    android:inputType="number" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Label -->
                <TextView
                    android:id="@+id/edit_book_quantity_label"
                    style="@style/CategoryStyle"
                    android:text="@string/book_quantity" />

                <ImageButton
                    android:id="@+id/edit_quantity_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginLeft"
                    android:layout_toRightOf="@+id/edit_book_quantity_label"
                    android:contentDescription="@string/increase_button"
                    android:src="@drawable/increase_button" />

                <ImageButton
                    android:id="@+id/edit_quantity_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_quantity_increase"
                    android:layout_marginLeft="@dimen/marginLeft"
                    android:layout_toRightOf="@+id/edit_book_quantity_label"
                    android:contentDescription="@string/decrease_button"
                    android:src="@drawable/decrease_button" />

                <!-- Book quantity field -->
                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldBookQuantityStyle"
                    android:layout_toRightOf="@+id/edit_quantity_increase"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"
                    android:text="1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Label -->
                <TextView
                    android:id="@+id/edit_book_supplier_name_label"
                    style="@style/CategoryStyle"
                    android:text="@string/book_supplier" />

                <!-- Book supplier name field -->
                <EditText
                    android:id="@+id/edit_book_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/edit_book_supplier_name_label"
                    android:hint="@string/hint_book_supplier_name"
                    android:inputType="textCapWords" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Label -->
                <TextView
                    android:id="@+id/edit_book_supplier_contact_label"
                    style="@style/CategoryStyle"
                    android:text="@string/book_supplier_contact" />

                <ImageButton
                    android:id="@+id/phoneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginLeft_phone_icon"
                    android:layout_toRightOf="@+id/edit_book_supplier_contact_label"
                    android:contentDescription="@string/supplier_phone_number"
                    android:src="@drawable/phone_call_icon" />

                <!-- Book supplier contact field -->
                <EditText
                    android:id="@+id/edit_book_supplier_contact"
                    style="@style/EditorFieldStyle"
                    android:layout_toRightOf="@+id/edit_book_supplier_contact_label"
                    android:hint="@string/hint_book_supplier_contact"
                    android:inputType="phone" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
